fix: [GetJoinedClub REST] move userId to body
