# http/gen/api_server_gen.go
@@ -1,6 +1,6 @@
 // Package api_gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api_gen
 
 import (
@@ -26,8 +26,8 @@ type ServerInterface interface {
 	// (GET /clubs/search)
 	SearchClubs(c *fiber.Ctx, params SearchClubsParams) error
 	// Get clubs joined by the user
-	// (GET /clubs/user/{userId})
-	GetJoinedClub(c *fiber.Ctx, userId string) error
+	// (GET /clubs/user)
+	GetJoinedClub(c *fiber.Ctx) error
 	// Check if a user belongs to the club
 	// (GET /clubs/{clubId}/is-belong)
 	IsBelongToClub(c *fiber.Ctx, clubId string, params IsBelongToClubParams) error
@@ -109,17 +109,7 @@ func (siw *ServerInterfaceWrapper) SearchClubs(c *fiber.Ctx) error {
 // GetJoinedClub operation middleware
 func (siw *ServerInterfaceWrapper) GetJoinedClub(c *fiber.Ctx) error {
 
-	var err error
-
-	// ------------- Path parameter "userId" -------------
-	var userId string
-
-	err = runtime.BindStyledParameterWithOptions("simple", "userId", c.Params("userId"), &userId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
-	if err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, fmt.Errorf("Invalid format for parameter userId: %w", err).Error())
-	}
-
-	return siw.Handler.GetJoinedClub(c, userId)
+	return siw.Handler.GetJoinedClub(c)
 }
 
 // IsBelongToClub operation middleware
@@ -223,7 +213,7 @@ func RegisterHandlersWithOptions(router fiber.Router, si ServerInterface, option
 
 	router.Get(options.BaseURL+"/clubs/search", wrapper.SearchClubs)
 
-	router.Get(options.BaseURL+"/clubs/user/:userId", wrapper.GetJoinedClub)
+	router.Get(options.BaseURL+"/clubs/user", wrapper.GetJoinedClub)
 
 	router.Get(options.BaseURL+"/clubs/:clubId/is-belong", wrapper.IsBelongToClub)
 
