# http/gen/api_spec.yaml
@@ -127,16 +127,21 @@ paths:
           description: Invalid request
         '500':
           description: Internal server error
-  /clubs/user/{userId}:
+  /clubs/user:
     get:
       summary: Get clubs joined by the user
       operationId: GetJoinedClub
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+              required:
+                - userId
       responses:
         '200':
           description: Clubs joined by the user
